--- a/notice/templates/notice/detail.html
+++ b/notice/templates/notice/detail.html
@@ -13,76 +13,73 @@
 
 {% block content %}
 
-<div class="contentsAreaBox">
-  <div class="creteHeader">
-    <div class="inputCell">
-      <span class="inputName" required>제목</span>
-      <div class="noticeTitle">{{ notice.title }}</div>
+<div class="basic_container notice_container">
+  <div class="notice_title_box">
+    <div class="notice_title_box_kinds">
+      <div class="notice_title_label">구 분</div>
+      <div class="basic_input notice_input_Kinds">{% if notice.kinds == "driver" %}기사님{% elif notice.kinds == "office"%}사무실{% endif %}</div>
     </div>
-    <div class="inputCell">
-      <span class="inputName">구분</span>
-      <div class="radiobox">
-        <div class="noticeTitle">{% if notice.kinds == "driver" %}기사님{% elif notice.kinds == "office" %}사무실{% endif %}</div>
-        
-      </div>
-    </div>
-    <div class="inputCell inputCellFile">
-      <span class="inputName">첨부파일</span>
-      <div class="fileBox">
-        {% for file in notice_files %}
-        <a href="{% url 'notice:download' notice.kinds notice.id file.id %}" class="fileLink">{{file.filename}}</a>
-        {% endfor %}
-      </div>
-    </div>
-  </div>
-  <div class="noticeTextarea">{{notice.content}}</div>
     {% if notice.creator.id == request.session.user or request.session.authority == 0 %}
-    <div class="createBtnBox">
-      <form action="{% url 'notice:delete' notice.kinds notice.id %}" class="deleteForm" onsubmit="return confirm('정말로 삭제하시겠습니까?');">
-        <input autocomplete="off" type="submit" value="삭제" class="deleteBtn">
+    <div class="notice_detail_btn_box">
+      <form action="{% url 'notice:delete' notice.kinds notice.id %}" class="deleteForm"
+        onsubmit="return confirm('정말로 삭제하시겠습니까?');">
+        <input autocomplete="off" type="submit" value="삭제" class="delete_btn">
       </form>
       {% if notice.creator.id == request.session.user %}
       <form action="{% url 'notice:edit' notice.kinds notice.id %}" class="noticeDetailEdit">
-        <input autocomplete="off" type="submit" value="수정" class="editBtn">
+        <input autocomplete="off" type="submit" value="수정" class="basic_btn">
       </form>
       {% endif %}
     </div>
     {% endif %}
+  </div>
+  <div class="notice_title_box">
+    <div class="notice_title_label">제 목</div>
+    <input type="text" class="basic_input notice_input_title" value="{{ notice.title }}" disabled>
+  </div>
+  <div class="notice_file_box">
+    <div class="notice_title_label notice_title_label_file">첨 부 파 일</div>
+    <div class="notice_file_input">
+      {% for file in notice_files %}
+      <a href="{% url 'notice:download' notice.kinds notice.id file.id %}">{{file.filename}}</a>
+      {% endfor %}
+    </div>
+  </div>
+  <div class="notice_contents_box">
+    <div class="notice_contents_box_title">내용</div>
+    <textarea class="notice_contents_area" readonly>{{notice.content}}</textarea>
+  </div>
+
 </div>
 
+<div class="basic_container add_comment_container">
+  <div class="notice_add_comment_title">댓글쓰기</div>
+  <form method="post" action="" class="add_comment_form">
+    {% csrf_token %}
+    <textarea name="content" class="add_comment_textarea"></textarea>
+    <input type="submit" value="댓글쓰기" class="add_comment_btn">
+  </form>
+</div>
 {% if notice_comments %}
-<div class="commentArea">
-  <div class="commentTitle">댓글<span>{{notice_comments | length}}</span></div>
-  
-  {% for comment in notice_comments %}
-  <div class="commentBox">
-    <div class="commentUserDataCell">
-      <span class="commentUserTitle">{{comment.creator}}</span>
-      <span class="commentCreateDate">{{comment.pub_date | date:'Y.m.d H:i:s'}}</span>
-      {% if request.session.user == comment.creator.id or request.session.authority == 0 %}
-      <form method="post" action="{% url 'notice:comment_del' notice.kinds notice.id comment.id %}" onsubmit="return confirm('정말로 삭제하시겠습니까?');">
-        {% csrf_token %}
-        <input autocomplete="off" type="submit" class="commentDeleteBtn" value="삭제">
-      </form>
-      {% endif %}
+<div class="basic_container comment_list_container">
+  <div class="notice_comment_list_title">댓글({{notice_comments | length}})</div>
+  <div class="notice_comment_list_Box">
+    {% for comment in notice_comments %}
+    <div class="comment_box">
+      <div class="comment_creator_box">
+        <div class="comment_creator">[{{comment.creator}}] {{comment.pub_date | date:'Y.m.d H:i:s'}}</div>
+        {% if request.session.user == comment.creator.id or request.session.authority == 0 %}
+        <form method="post" action="{% url 'notice:comment_del' notice.kinds notice.id comment.id %}">
+          {% csrf_token %}
+          <input type="submit" class="delete_btn comment_delete_btn" value="삭제">
+        </form>
+        {% endif %}
+      </div>
+      <div class="comment_contents_box"></div>
     </div>
-    <div class="commentContents">{{comment.content}}</div>
+    {% endfor %}
   </div>
-  {% endfor %}
 </div>
 {% endif %}
 
-<div class="commentCreateArea">
-  <form action="" method="post" class="notice_detail_chat_Box_create_form">
-    {% csrf_token %}
-    <div class="commentCreateTitle">댓글쓰기</div>
-    <div class="commentCreateBox">
-      <div class="commentCreateGuide">댓글</div>
-      <textarea name="content" class="length100" required></textarea>
-    </div>
-    <div class="commentCreateBtnCell">
-      <input autocomplete="off" type="submit" value="등록" class="createBtn">
-    </div>
-  </form>
-</div>
 {% endblock %}
