--- a/templates/base.html
+++ b/templates/base.html
@@ -444,6 +444,7 @@
   <script src="{% static 'js/common/changePW.js' %}"></script>
   <script src="{% static 'js/common/essentail.js' %}"></script>
   <script src="{% static 'js/common/allChecker.js' %}"></script>
+  <script src="{% static 'js/common/fileForm.js' %}"></script>
   {% block script %}{% endblock %}
 
 </body>
