--- a/notice/templates/notice/create.html
+++ b/notice/templates/notice/create.html
@@ -1,45 +1,53 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block head %}
+<link rel="stylesheet" href="{% static 'css/notice/notice_detail.css' %}" type="text/css" />
 <link rel="stylesheet" href="{% static 'css/notice/notice_create.css' %}" type="text/css" />
 {% endblock %}
 
 {% block content-header %}
+<!--trp HeaderTitle-->
 <div class="HeaderTitle">
-  공지사항 작성
+  {% if notice.kinds == 'driver' %}기사님 공지사항 {% else %} 사무실 공지사항 {% endif %}
 </div>
 {% endblock %}
 
-
 {% block content %}
 
-<div class="contentsAreaBox">
-  <form action="" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="creteHeader">
-      <div class="inputCell">
-        <span class="inputName">제목</span>
-        <input autocomplete="off" type="text" name="title" class="length100" required>
-      </div>
-      <div class="inputCell">
-        <span class="inputName">구분</span>
-        <div class="radiobox">
-          <input autocomplete="off" type="radio" id="driver" value="driver" name="kinds" {% if kinds == "driver" %}checked{% endif %}>
-          <label for="driver">기사님</label>
-          <input autocomplete="off" type="radio" id="office" value="office" name="kinds" {% if kinds == "office" %}checked{% endif %}>
-          <label for="office">사무실</label>
-        </div>
-      </div>
-      <div class="inputCell inputCellFile">
-        <span class="inputName">첨부파일</span>
-        <input autocomplete="off" type="file" name="file" multiple>
-      </div>
+<form action="" method="post" enctype="multipart/form-data" class="basic_container notice_container">
+  {% csrf_token %}
+  <div class="notice_title_box">
+    <div class="notice_title_box_kinds">
+      <div class="notice_title_label">구 분</div>
+      <select class="basic_select kinds_select" name="kinds">
+        <option value="driver" id="driver">기사님</option>
+        <option value="office" id="office">사무실</option>
+      </select>
     </div>
-    <textarea name="content" required class="noticeTextarea length3000"></textarea>
-    <div class="createBtnBox">
-      <input autocomplete="off" type="submit" value="등록" class="createBtn">
+    <input type="submit" class="create_btn notice_create_btn" value="등록">
+  </div>
+  <div class="notice_title_box">
+    <div class="notice_title_label">제 목</div>
+    <input type="text" class="basic_input notice_input_title" name="title" required>
+  </div>
+  <div class="notice_file_box">
+    <div class="notice_title_label notice_title_label_file">첨 부 파 일</div>
+    <div class="notice_create_file_box">
+      <div class="basic_file_box notice_create_file_input">
+        <label for="notice_create_file">파일선택</label>
+        <input name="file" type="file" class="basic_file-list" id="notice_create_file" multiple>
+      </div>
+      <div class="notice_create_file_list"></div>
     </div>
-  </form>
-</div>
+  </div>
+  <div class="notice_contents_box">
+    <div class="notice_contents_box_title">내용</div>
+    <textarea name="content" class="notice_contents_area" required></textarea>
+  </div>
+</form>
+
+{% endblock %}
+
+{% block script %}
+<script src="{% static 'js/notice/file.js' %}"></script>
 {% endblock %}
