--- a/static/css/notice/notice_create.css
+++ b/static/css/notice/notice_create.css
@@ -1,265 +1,88 @@
-.contentsAreaBox form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: auto;
+.notice_container {
+  height: 78rem;
 }
 
-.creteHeader {
+.kinds_select {
+  width: 10rem;
+}
+
+.notice_create_btn {
+  margin-left: auto;
+}
+
+.notice_file_box {
+  height: 10.6rem;
+}
+
+.notice_create_file_box {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100%;
-  height: 15rem;
+  width: calc(100% - 8.6rem);
+  height: 100%;
 }
 
-.inputCell {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 2.5rem;
+.basic_file-list {
+  display: none;
 }
 
-.inputCellFile {
-  align-items: flex-start;
-  height: 6.5rem;
-}
-
-.inputName {
-  width: 7rem;
-  padding-left: 1rem;
-  font-size: 1.6rem;
-  font-weight: 500;
-  color: #191919;
-}
-
-.inputCell input{
-  border: 0.1rem solid #D2D2D2;
-  border-radius: 0.3rem;
-  outline: none;
-}
-
-.inputCell input[type=text] {
-  width: calc(100% - 12rem);
-  height: 2.3rem;
-  padding-left: 1rem;
-}
-
-.inputCell input[type=file] {
-  width: calc(100% - 13rem);
-  height: 4.3rem;
-  padding: 1rem;
-}
-
-.radiobox {
-  display: flex;
-  align-items: center;
-  width: calc(100% - 11rem);
-}
-
-.radiobox input{
-  width: 1.6rem;
-  height: 1.6rem;
-  margin: 0.3rem 1rem 0 0;
-  border: 0.1rem solid #D2D2D2;
-  cursor: pointer;
-}
-
-.radiobox label {
-  font-size: 1.6rem;
-  color: #191919;
-  margin-right: 2rem;
-  cursor: pointer;
-}
-
-.contentsAreaBox form textarea {
-  height: auto;
-  min-height: 36rem;
-  margin-top: 2rem;
-  padding: 1rem;
-  border: 0.1rem solid #D2D2D2;
-  border-radius: 0.3rem;
-  resize: none;
-  outline: none;
-}
-
-.createBtnBox {
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  height: 2.5rem;
-  margin: 2rem 0;
-}
-
-.textArea{
-  width: 100%;
-  height: 5rem;
-  border: 0.1rem solid black;
-}
-
-
-
-
-
-/*commentArea*/
-.commentArea,
-.commentCreateArea {
-  width: calc(100% - 2rem);
-  height: auto;
-  padding: 1rem 1rem 0 1rem;
-  margin-top: 2rem;
-  background-color: white;
-  border: 0.1rem solid #CDCDCE;
-  border-radius: 0.3rem;
-  box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.16);
-}
-
-.commentArea form {
+.notice_create_file_list {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: auto;
-}
-
-.commentTitle {
-  display: flex;
   justify-content: flex-start;
-  align-items: center;
   width: 100%;
-  height: 2rem;
-  padding-bottom: 0.4rem;
-  font-size: 1.6rem;
-  color: #191919;
-  border-bottom: 0.1rem solid #CDCDCE;
-}
-
-.commentTitle span {
-  margin-left: 0.6rem;
-}
-
-.commentBox {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 100%;
-  height: auto;
-  min-height: 6rem;
-  padding: 0.4rem 0 1rem 1rem;
-  border-bottom: 0.1rem solid #CDCDCE;
+  height: 6rem;
+  border: 0.1rem solid #CDCDCD;
+  border-radius: 0.3rem;
   box-sizing: border-box;
+  overflow-y: scroll;
 }
 
-.commentArea form div:nth-last-child(1) {
+.notice_create_file_list::-webkit-scrollbar {
+  width: 0.6rem;
+}
+
+.notice_create_file_list::-webkit-scrollbar-thumb {
+  height: 17%;
+  background-color: #4E5869;
+  border-radius: 1rem;
+}
+
+.notice_create_file_list::-webkit-scrollbar-track {
+  background-color: #F1F3F4;
+}
+
+.notice_create_file_input {
+  min-width: 40rem;
+  width: calc(100% - 80rem);
   border: none;
 }
 
-.commentUserDataCell {
+.notice_file_cell {
   display: flex;
   justify-content: flex-start;
-  align-items: flex-end;
-  width: 100%;
-  height: 2rem;
-}
-
-.commentUserTitle {
-  font-size: 1.4rem;
-  font-weight: 500;
-  color: #191919;
-  margin-right: 0.6rem;
-}
-
-.commentCreateDate {
-  font-size: 1.2rem;
-  color: #444444;
-  margin-right: 0.6rem;
-}
-
-.commentUserDataCell input{
-  display: flex;
-  justify-content: center;
   align-items: center;
-  width: 4rem;
-  height: 1.6rem;
-  border: 0.1rem solid #CDCDCE;
-  border-radius: 0.2rem;
+  width: 100%;
+  height: 2.4rem;
+  padding: 0.6rem 0 0.6rem 0.6rem;
   box-sizing: border-box;
-  background-color: white;
-  font-size: 1.1rem;
-  line-height: 1.5rem;
-  color: red;
+}
+
+.notice_file_cell:hover {
+  background-color: #F1F3F4;
+}
+
+.notice_delete_file_Btn {
+  margin-right: 1rem;
+  font-size: 1.6rem;
+  padding-bottom: 0.2rem;
   cursor: pointer;
 }
 
-.commentContents {
-  font-size: 1.5rem;
-  color: #191919;
+.notice_delete_file_Btn:hover {
+  color: #DC1E1E;
 }
 
-
-
-
-
-
-/*commentCreateArea*/
-.commentCreateArea {
-  height: 18rem;
+.notice_contents_box {
+  height: 52.2rem;
 }
-
-.commentCreateArea form {
-  width: 100%;
-  height: 100%;
-}
-
-.commentCreateTitle {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 2rem;
-  padding-bottom: 0.4rem;
-  font-size: 1.6rem;
-  color: #191919;
-  border-bottom: 0.1rem solid #CDCDCE;
-}
-
-.commentCreateBox {
-  display: flex;
-  justify-content: space-between;
-  height: 10rem;
-  margin: 1rem 0;
-}
-
-.commentCreateGuide {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 10rem;
-  height: 10rem;
-  border: 0.1rem solid #CDCDCE;
-  border-radius: 0.2rem;
-  box-sizing: border-box;
-  font-size: 1.6rem;
-  color: #191919;
-}
-
-.commentCreateBox textarea {
-  width: calc(100% - 12rem);
-  height: 100%;
-  padding: 1rem;
-  border: 0.1rem solid #CDCDCE;
-  border-radius: 0.2rem;
-  box-sizing: border-box;
-  outline: none;
-  resize: none;
-}
-
-.commentCreateBtnCell {
-  display: flex;
-  justify-content: flex-end;
-}
-
-
-
-
-
