--- a/static/css/notice/notice_detail.css
+++ b/static/css/notice/notice_detail.css
@@ -176,7 +176,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 4.2rem);
   padding: 1rem 2rem;
   box-sizing: border-box;
 }
@@ -243,9 +243,14 @@
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
-  min-height: 5.2rem;
+  min-height: 4.6rem;
   height: auto;
+  margin-top: 1.6rem;
   border-bottom: 0.1rem solid black;
+}
+
+.comment_box:nth-child(1){
+  margin-top: 0;
 }
 
 .comment_creator_box{
@@ -268,7 +273,11 @@
 
 .comment_contents_box{
   width: 100%;
-  min-height: 2.6rem;
+  min-height: 2rem;
+  padding-left: 0.4rem;
+  padding-bottom: 0.4rem;
+  box-sizing: border-box;
   height: auto;
   outline: none;
+  white-space: pre-line;
 }
