출퇴근수금관리, 급여,출퇴근노선관리 수정
출퇴근 수금관리 - RegularlyDispatchData만 나오게 수정,
급여 - 입사일자 옆에 년, 개월 수 표시,
출퇴근 노선관리 - connect 수정 부분 위치 수정

--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -34,6 +34,7 @@
         <select name="use" id="filterUse" class="inputModules">
             <option {% if use == '사용' %} selected {% endif %} value="사용">사용</option>
             <option {% if use == '미사용' %} selected {% endif %} value="미사용">미사용</option>
+            <option {% if use == '임시' %} selected {% endif %} value="임시">임시</option>
         </select>
         <select name="age" id="filterAge" class="inputModules">
             <option {% if age == '나이 전체' %} selected {% endif %} value="나이 전체">나이 전체</option>
@@ -327,9 +328,9 @@
                     </div>
                     <div class="popupArticleDouble popupArticleUseEdit">
                         <label for="" class="popupArticleLabel"><span class="importantStar">*</span>사용여부</label>
-                        <input name="use" type="radio" class="hrUse" id="hrUse">
+                        <input name="use" value="사용" type="radio" class="hrUse" id="hrUse">
                         <label for="hrUse">사용</label>
-                        <input name="use" type="radio" class="hrUse" id="hrUnuse">
+                        <input name="use" value="미사용" type="radio" class="hrUse" id="hrUnuse">
                         <label for="hrUnuse">미사용</label>
                     </div>
                 </div>
