급여상세 - 마지막날 데이터 안나오는 부분 수정, 일반 수금관리 - 노선 검색 추가, 체크한 항목들 가격 총합 나오게 js 수정

--- a/accounting/templates/accounting/collect.html
+++ b/accounting/templates/accounting/collect.html
@@ -25,7 +25,10 @@
             <input value="{{date1}}" autocomplete="off" name="date1" type="date" class="inputModules">
             <span>~</span>
             <input value="{{date2}}" autocomplete="off" name="date2" type="date" class="inputModules">
-            <label class="searchName reservationName">예약자명 : </label>
+            <select name="select" class="searchType">
+                <option {% if select == '예약자' %} selected {% endif %} value="예약자">예약자</option>
+                <option {% if select == '노선' %} selected {% endif %} value="노선">노선</option>
+            </select>
             <input autocomplete="off" value="{{search}}" name="search" type="text" class="inputModules">
             <input autocomplete="off"type="submit" value="검색" class="btnModules dateSearchBtn">
         </div>
