출퇴근 노선관리 - 신규 그룹 생성 안되던 부분 수정

--- a/dispatch/templates/dispatch/regularly_route.html
+++ b/dispatch/templates/dispatch/regularly_route.html
@@ -102,7 +102,7 @@
         </div>
         <div class="groupCreateBtnBox">
           {% if group %}
-          <a href="{% url 'dispatch:regularly_route' %}">
+          <a href="{% url 'dispatch:regularly_route' %}?new=y">
             <div class="btnModules groupCreateNew">신규</div>
           </a>
           {% endif %}
